# rooster

./: LICENSE
.yarn/releases/: yarn-3.2.0-rc.12.cjs
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
scripts/: amman.sh  patch.crates-io.sh  update-solana-dependencies.sh
