[package]
name = "rooster"
version = "0.1.0"
edition = "2021"
authors = ["Metaplex Developers <dev@metaplex.com>"]
description = "Rooster: a simple program to test authorization rules for pNFTs."
license-file = "../LICENSE"
keywords = ["nft", "metaplex", "solana", "blockchain"]
repository = "https://github.com/metaplex-foundation/rooster"
readme = "../README.md"

[dependencies]
borsh = "0.9.3"
lpl-token-metadata = { version = "1.8.5", path = "../../ledamint-program-library/token-metadata/program", features = ["no-entrypoint"] }
lpl-utils = "0.1.0"
num-derive = "0.3.3"
num-traits = "~0.2"
shank = "0.0.10"
safecoin-program = "1.14"
thiserror = "~1.0"


[features]
no-entrypoint = []
test-bpf = []

[dev-dependencies]
assert_matches = "1.5.0"
safecoin-program-test = "1.14"
safecoin-sdk = "1.14"
safecoin-logger = "1.14"

[lib]
crate-type = ["cdylib", "lib"]
name = "rooster"

