[package]
name = "rooster"
version = "0.1.0"
edition = "2021"
authors = ["Metaplex Developers <dev@metaplex.com>"]
description = "Rooster: a simple program to test authorization rules for pNFTs."
license-file = "../LICENSE"
keywords = ["nft", "metaplex", "solana", "blockchain"]
repository = "https://github.com/metaplex-foundation/rooster"
readme = "../README.md"

[dependencies]
borsh = "0.9.3"
lpl-token-metadata = { version = "1.8.5", path = "../../ledamint-program-library/token-metadata/program", features = ["no-entrypoint"] }
lpl-utils = "0.1.0"
num-derive = "0.3.3"
num-traits = "~0.2"
shank = "0.0.10"
safecoin-program = {path = "../../Safecoin/sdk/program", version = "1.14.17"}
thiserror = "~1.0"


[features]
no-entrypoint = []
test-bpf = []

[dev-dependencies]
assert_matches = "1.5.0"
safecoin-program-test = {path = "../../Safecoin/program-test", version = "1.14.17"}
safecoin-sdk = {path = "../../Safecoin/sdk", version = "1.14.17"}
safecoin-logger = {path = "../../Safecoin/logger", version = "1.14.17"}

[lib]
crate-type = ["cdylib", "lib"]
name = "rooster"

